z-index bug on bootstrap alerts (#53)
The header has no z-index value so the bootstrap alerts overlap the header when scrolling.  Simple fix to z-index the header to 1 to "always" be ontop

http://cloud.wysi.co.uk/qY5E

--- a/src/scss/modules/_masthead.scss
+++ b/src/scss/modules/_masthead.scss
@@ -5,6 +5,7 @@
   right: 0;
   background: #333;
   padding: 0;
+  z-index: 1;
 }
 
 body {
